# DTU_ML-operations

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  data.dvc  data_parallel.py  greetings.py  prediction_database.csv  pyproject.toml  reproduce_issue.py  requirements-dev.txt  requirements.txt  tasks.py  train.dockerfile
.devcontainer/: devcontainer.json
.dvc/: config
.github/actions/setup-dvc/: action.yaml
.github/workflows/: cml_data.yaml  gcp.yaml  linting.yaml  pre-commit-update.yaml  pre-commit.yaml  stage_model.yaml  tests-req-txt.yaml  tests.yaml
W1/: .env  pyproject.toml  script.py
analysis/logging/: config.yaml  my_logger.py
analysis/profiling/: analyze.py  profile_resnet.py  profile_resnet.txt
configs/: config.yaml  model_conf.yaml  sweep.yaml  training_conf.yaml
configs/optimizer/: adam.yaml  nesterov.yaml
dockerfiles/: cloud.dockerfile  evaluate.dockerfile  wandb.dockerfile
models/: model.pth
src/ml_ops/: api.py  data.py  dataset.py  evaluate.py  lightning.py  link_best_model.py  link_model.py  model.py  promote_model.py  train.py  train_cli.py  utils.py  vae_mnist_working.py  visualize.py
src/ml_ops/api_module/: datadrift.py  datadrift_api.py  main.py
src/ml_ops_pl/: data.py  device.py  evaluate.py  visualize.py
tests/: __init__.py  test_data.py  test_model.py
tests/integrationtests/: test_apis.py
tests/performancetests/: locustfile.py  test_model.py
