[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_ops"
version = "0.0.1" # major.minor.patch
description = "Repository for the DTU Machine Learning Operations course."
authors = [
  { name = "Vincent Van Schependom", email = "vincent.van.schependom@gmail.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc[ssh]>=3.65.0",
    "fastapi==0.128.0",
    "gdown>=5.2.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "matplotlib>=3.10.8",
    "pathspec<2.0.0",
    "scikit-learn>=1.8.0",
    "torch==2.10.0",
    "typer==0.21.1",
    "uvicorn[standard]==0.40.0",
    "loguru>=0.7.3",
    "wandb>=0.23.1",
    "pytorch-lightning>=2.6.0",
    "torchvision>=0.18.0",
    "google-api-python-client>=2.187.0",
    "dvc-gs>=3.0.2",
    "requests>=2.32.5",
    "python-multipart>=0.0.21",
    "opencv-python>=4.12.0.88",
    "httpx>=0.28.1",
    "locust>=2.43.1",
    "evidently>=0.7.20",
    "pandas>=2.3.3",
]

# Optional dependency groups, which can be installed using:
#    uv sync --group dev
# To install all groups, use:
#    uv sync --all-groups
[dependency-groups]
dev = [
    "coverage==7.13.2",
    "invoke==2.2.1",
    "mkdocs-material==9.7.1",
    "mkdocs==1.6.1",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "mkdocstrings-python==2.0.1",
    "mypy>=1.19.1", # static type checker
    "ruff>=0.14.10",
    "ty>=0.0.9",
    "snakeviz>=2.2.2",
    "torch-tb-profiler>=0.4.3",
    "tensorboard-plugin-profile>=2.21.3; sys_platform != 'win32'",
]

[project.scripts]
train = "ml_ops.train:main" # creates an executable `train` script that calls src/ml_ops/train.py:main()

## To declare which optional dependencies should be installed when
## executing `uv sync`, use the following section.
# [tool.uv]
# default-groups = ["dev"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
lint.select = ["I"] # Import-related rules
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]

## If we created our project with
##    uv init --lib,
## then these lines would be added:
# [build-system]
# requires = ["uv_build>=0.9.21,<0.10.0"]
# build-backend = "uv_build"
