[project]
name = "w1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
]

# Optional dependency group which can be
# installed with 
#       `uv sync --group dataframes`
# or to install all groups,
#       `uv sync --all-groups`
[project.optional-dependencies]
dataframes = [
    "pandas>=2.3.3",
]

# Only for development and testing,
# not needed in production
[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

# Specify which dependency groups to install by default
[tool.uv]
default-groups = ["dev"] # or default-groups = "all"

